transfer from bootstrap

--- a/index.html
+++ b/index.html
@@ -1,1 +1,48 @@
-<h1> Work in Progress </h>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Portfolio</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/css/reset.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+</head>
+<body>
+        <section class="header">
+            <div class="name">
+                <h1>Matthew Allen</h1>
+            </div>
+            <div id="placeholder">
+            </div>
+            <div id="options">
+                <p><a href="index.html">About</a>  |  <a href="portfolio.html">Portfolio</a>  |  <a href="contact.html">Contact</a></p>
+            </div>
+        </section>
+        <div class="Main">
+            <div class="One">
+                <hr>
+                <div class="Two">
+                    <h2>About Me</h2>
+                    <hr>
+                </div>
+                <img src="assets/images/ProfilePictureProfessional.jpg" class="Main-Picture" alt="Profile Picture">
+                <p>Repellat omnis ut velit id doloribus molestias. Illo ea et aut fuga labore enim vitae non. Veniam dolores ut et pariatur sint quod. Ea unde quia aut consequatur qui sit. Voluptatem illo qui cumque optio. Inventore sunt aut debitis corrupti.
+                Nisi molestias odit doloremque dolores voluptas libero. Ea et nostrum aut iusto ad at voluptate. Ea consequuntur saepe accusamus dolores minima. Aspernatur et facilis eius nesciunt nisi quidem voluptatibus porro.
+                Nam aliquid nihil laudantium qui. Fuga laboriosam ipsa rerum. Sunt non accusantium rerum consectetur odit et culpa. Quas eos provident ut expedita. Mollitia tempore voluptatem non eaque laboriosam corrupti.</p>
+                <p>Repellat omnis ut velit id doloribus molestias. Illo ea et aut fuga labore enim vitae non. Veniam dolores ut et pariatur sint quod. Ea unde quia aut consequatur qui sit. Voluptatem illo qui cumque optio. Inventore sunt aut debitis corrupti.
+                Nisi molestias odit doloremque dolores voluptas libero. Ea et nostrum aut iusto ad at voluptate. Ea consequuntur saepe accusamus dolores minima. Aspernatur et facilis eius nesciunt nisi quidem voluptatibus porro.
+                Nam aliquid nihil laudantium qui. Fuga laboriosam ipsa rerum. Sunt non accusantium rerum consectetur odit et culpa. Quas eos provident ut expedita. Mollitia tempore voluptatem non eaque laboriosam corrupti.</p>
+                <p>Repellat omnis ut velit id doloribus molestias. Illo ea et aut fuga labore enim vitae non. Veniam dolores ut et pariatur sint quod. Ea unde quia aut consequatur qui sit. Voluptatem illo qui cumque optio. Inventore sunt aut debitis corrupti.
+                Nisi molestias odit doloremque dolores voluptas libero. Ea et nostrum aut iusto ad at voluptate. Ea consequuntur saepe accusamus dolores minima. Aspernatur et facilis eius nesciunt nisi quidem voluptatibus porro.
+                Nam aliquid nihil laudantium qui. Fuga laboriosam ipsa rerum. Sunt non accusantium rerum consectetur odit et culpa. Quas eos provident ut expedita. Mollitia tempore voluptatem non eaque laboriosam corrupti.</p>
+            </div>
+        </div>
+        <div class="footer">
+            <p><h6>Copyright ©</h6></p>
+        </div>
+                
+                       
+</body>
+</html>
