--- a/portfolio.html
+++ b/portfolio.html
@@ -38,7 +38,7 @@
                   <div class="col-md-3">
                     <a href="">
                         <img src="assets/images/RPG.png" class="imageSize" alt="rpg game">
-                        <div class="button">RPG Game</div>
+                        <div class="button"><a  href="/unit-4-game/index.html">RPG Game</a></div>
                   </div>
                   <div class="col-md-3"></div>
                   <div class="col-md-3"></div>
