More changes, some links added, skill pics added

--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
               <br>
               <h5>
                 <p>Introduction About Me</p>
-                <p>Projects I have worked on</p>
-                <p>Skills I possess</p>
+                <p>Projects I Have Contributed To</p>
+                <p>My Particular Set Of Skills</p>
               </h5>
             </div>
           </div>
@@ -192,7 +192,7 @@
                 <i class="fas fa-check-circle fa-2x indigo-text"></i>
               </div>
               <div class="col-10">
-                <h6 class="feature-title">Route 420 App</h6>
+                <h6 class="feature-title"><a href="">Route 420 App</a></h6>
                 <p class="grey-text">CBD product locator that identifies where specific CBD relateed products are sold based on a users location. I was part of the front end team and helped with design.
                 </p>
                 <div style="height:15px"></div>
@@ -206,7 +206,7 @@
                 <i class="fas fa-check-circle fa-2x indigo-text"></i>
               </div>
               <div class="col-10">
-                <h6 class="feature-title">Grab a Bite App</h6>
+                <h6 class="feature-title"><a href="https://justmrmatt.github.io/Project_1/">Grab a Bite App</a></h6>
                 <p class="grey-text">Date night style app where users can see restaurants nearby and link to additional information. I was responsible for the front end coding and design.
                 </p>
                 <div style="height:15px"></div>
@@ -220,7 +220,7 @@
                 <i class="fas fa-check-circle fa-2x indigo-text"></i>
               </div>
               <div class="col-10">
-                <h6 class="feature-title">Funko Style RPG Game</h6>
+                <h6 class="feature-title"><a href="https://justmrmatt.github.io/unit-4-game/">Funko Style RPG Game</a></h6>
                 <p class="grey-text">An RPG style game where a user selects a character and battles opponents in an arena setting.</p>
                 <div style="height:15px"></div>
               </div>
@@ -233,7 +233,7 @@
                 <i class="fas fa-check-circle fa-2x indigo-text"></i>
               </div>
               <div class="col-10">
-                <h6 class="feature-title">Crystal Collector Game</h6>
+                <h6 class="feature-title"><a  href="https://justmrmatt.github.io/unit-4-game-Redux/">Crystal Collector Game</a></h6>
                 <p class="grey-text">A simple game where a user has to identify a pattern by clicking crystals with the goal being to reach a randomly chosen total.</p>
                 <div style="height:15px"></div>
               </div>
@@ -256,7 +256,7 @@
                 <i class="fas fa-check-circle fa-2x indigo-text"></i>
               </div>
               <div class="col-10">
-                <h6 class="feature-title">Str8 Fire Technical Solutions</h6>
+                <h6 class="feature-title"><a  href="">Str8 Fire Technical Solutions</a></h6>
                 <p class="grey-text">A cryptocurrency mining operation where user can obtain stock information as well as purchase crypto-mining contracts. I am a co-founder and am responsible for full web design.
                 </p>
                 <div style="height:15px"></div>
@@ -270,7 +270,7 @@
                 <i class="fas fa-check-circle fa-2x indigo-text"></i>
               </div>
               <div class="col-10">
-                <h6 class="feature-title">Allen, Allen & Foster, LLC.</h6>
+                <h6 class="feature-title"><a  href="">Allen, Allen & Foster, LLC.</a></h6>
                 <p class="grey-text">I helped design the front end and help keep everything up to date as well as make adjustments at the request of the owner.</p>
                 <div style="height:15px"></div>
               </div>
@@ -283,7 +283,7 @@
                 <i class="fas fa-check-circle fa-2x indigo-text"></i>
               </div>
               <div class="col-10">
-                <h6 class="feature-title">The Bearded Veteran</h6>
+                <h6 class="feature-title"><a  href="">The Bearded Veteran</a></h6>
                 <p class="grey-text">I helped design the website as well as make adjustments as needed at the request of the owner.
                 </p>
                 <div style="height:15px"></div>
@@ -307,7 +307,7 @@
       <!--Section: More-->
       <section>
 
-        <h2 class="my-5 h3 text-center">Skills I Possess</h2>
+        <h2 class="my-5 h3 text-center">Skills</h2>
 
         <!--First row-->
         <div class="row features-small mt-5 wow fadeIn">
@@ -317,12 +317,7 @@
             <!--Grid row-->
             <div class="row">
               <div class="col-2">
-                <img src="assets/img/Icons/HTMLicon.png">
-              </div>
-              <div class="col-10 mb-2 pl-3">
-                <h5 class="feature-title font-bold mb-1"></h5>
-                <p class="grey-text mt-2">
-                </p>
+                <img src="assets/img/Icons/.skillsIcons.png">
               </div>
             </div>
             <!--/Grid row-->
@@ -334,12 +329,7 @@
             <!--Grid row-->
             <div class="row">
               <div class="col-2">
-                <img src="assets/img/Icons/CSSicon.png">
-              </div>
-              <div class="col-10 mb-2">
-                <h5 class="feature-title font-bold mb-1"></h5>
-                <p class="grey-text mt-2">
-                </p>
+                <img src="assets/img/Icons/.VScode.png">
               </div>
             </div>
             <!--/Grid row-->
@@ -351,12 +341,7 @@
             <!--Grid row-->
             <div class="row">
               <div class="col-2">
-                <img src="assets/img/Icons/JSicon.png">
-              </div>
-              <div class="col-10 mb-2">
-                <h5 class="feature-title font-bold mb-1"></h5>
-                <p class="grey-text mt-2">
-                </p>
+                <img src="assets/img/Icons/.BULMAicon.png">
               </div>
             </div>
             <!--/Grid row-->
@@ -368,12 +353,7 @@
             <!--Grid row-->
             <div class="row">
               <div class="col-2">
-                <img src="assets/img/Icons/BootStrap.BULMAiconTEXT.png">
-              </div>
-              <div class="col-10 mb-2">
-                <h5 class="feature-title font-bold mb-1"></h5>
-                <p class="grey-text mt-2">
-                </p>
+                <img src="assets/img/Icons/.Bootstrapicon.png">
               </div>
             </div>
             <!--/Grid row-->
@@ -391,12 +371,7 @@
             <!--Grid row-->
             <div class="row">
               <div class="col-2">
-                <img src="assets/img/Icons/GITicon.png">
-              </div>
-              <div class="col-10 mb-2">
-                <h5 class="feature-title font-bold mb-1">Modularity</h5>
-                <p class="grey-text mt-2">Material Design for Bootstrap comes with both, compiled, ready to use libraries including all features as
-                  well as modules for CSS (SASS files) and JS.</p>
+                <img src="assets/img/Icons/.NODE.png">
               </div>
             </div>
             <!--/Grid row-->
@@ -408,12 +383,7 @@
             <!--Grid row-->
             <div class="row">
               <div class="col-2">
-                <img src="assets/img/Icons/NODEicon.png">
-              </div>
-              <div class="col-10 mb-2">
-                <h5 class="feature-title font-bold mb-1">Technical support</h5>
-                <p class="grey-text mt-2">We care about reliability. If you have any questions - do not hesitate to contact us.
-                </p>
+                <img src="assets/img/Icons/.mySQLIcon.png">
               </div>
             </div>
             <!--/Grid row-->
@@ -425,11 +395,7 @@
             <!--Grid row-->
             <div class="row">
               <div class="col-2">
-                <img src="assets/img/Icons/SQL.MONGOicon.png">
-              </div>
-              <div class="col-10 mb-2">
-                <h5 class="feature-title font-bold mb-1">Flexbox</h5>
-                <p class="grey-text mt-2">MDB fully supports Flex Box. You can forget about alignment issues.</p>
+                <img src="assets/img/Icons/.Mongo.png">
               </div>
             </div>
             <!--/Grid row-->
@@ -441,11 +407,7 @@
             <!--Grid row-->
             <div class="row">
               <div class="col-2">
-                <img src="assets/img/Icons/REACTicon.PNG">
-              </div>
-              <div class="col-10 mb-2">
-                <h5 class="feature-title font-bold mb-1">SASS files</h5>
-                <p class="grey-text mt-2">Arranged and well documented .scss files can't wait until you compile them.</p>
+                <img src="assets/img/Icons/.REACT.PNG">
               </div>
             </div>
             <!--/Grid row-->
@@ -459,11 +421,13 @@
       <!--Section: More-->
 
     </div>
+
+  </br>
   </main>
   <!--Main layout-->
 
   <!--Footer-->
-  <footer class="page-footer text-center font-small mt-4 wow fadeIn">
+  <footer class="page-footer text-center font-large mt-4 wow fadeIn">
 
     <!-- Social icons -->
     <div class="pb-4">
