changes to code for new images

--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
             <!--Grid row-->
             <div class="row">
               <div class="col-2">
-                <img src="assets/img/Icons/.skillsIcons.png">
+                <img src="assets/img/Icons/skillsIcons.png">
               </div>
             </div>
             <!--/Grid row-->
@@ -329,7 +329,7 @@
             <!--Grid row-->
             <div class="row">
               <div class="col-2">
-                <img src="assets/img/Icons/.VScode.png">
+                <img src="assets/img/Icons/VScode.png">
               </div>
             </div>
             <!--/Grid row-->
@@ -341,7 +341,7 @@
             <!--Grid row-->
             <div class="row">
               <div class="col-2">
-                <img src="assets/img/Icons/.BULMAicon.png">
+                <img src="assets/img/Icons/BULMAicon.png">
               </div>
             </div>
             <!--/Grid row-->
@@ -353,7 +353,7 @@
             <!--Grid row-->
             <div class="row">
               <div class="col-2">
-                <img src="assets/img/Icons/.Bootstrapicon.png">
+                <img src="assets/img/Icons/Bootstrapicon.png">
               </div>
             </div>
             <!--/Grid row-->
@@ -371,7 +371,7 @@
             <!--Grid row-->
             <div class="row">
               <div class="col-2">
-                <img src="assets/img/Icons/.NODE.png">
+                <img src="assets/img/Icons/NODE.png">
               </div>
             </div>
             <!--/Grid row-->
@@ -383,7 +383,7 @@
             <!--Grid row-->
             <div class="row">
               <div class="col-2">
-                <img src="assets/img/Icons/.mySQLIcon.png">
+                <img src="assets/img/Icons/mySQLIcon.png">
               </div>
             </div>
             <!--/Grid row-->
@@ -395,7 +395,7 @@
             <!--Grid row-->
             <div class="row">
               <div class="col-2">
-                <img src="assets/img/Icons/.Mongo.png">
+                <img src="assets/img/Icons/Mongo.png">
               </div>
             </div>
             <!--/Grid row-->
@@ -407,7 +407,7 @@
             <!--Grid row-->
             <div class="row">
               <div class="col-2">
-                <img src="assets/img/Icons/.REACT.PNG">
+                <img src="assets/img/Icons/REACT.PNG">
               </div>
             </div>
             <!--/Grid row-->
