--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
             <!--Grid row-->
             <div class="row">
               <div class="col-2">
-                <img src="assets/img/Icons/REACT.PNG">
+                <img src="assets/img/Icons/REACT.png">
               </div>
             </div>
             <!--/Grid row-->
