--- a/index.html
+++ b/index.html
@@ -128,15 +128,8 @@
           <div class="mask rgba-black-light d-flex justify-content-center align-items-center">
 
             <!-- Content -->
-            <div class="text-center white-text mx-5 wow fadeIn">
-              <h1 class="mb-4"><strong>Welcome To My Portfolio</strong></h1>
-              <h3>Here you will find</h3>
-              <br>
-              <h5>
-                <p>Introduction About Me</p>
-                <p>Projects I Have Contributed To</p>
-                <p>My Particular Set Of Skills</p>
-              </h5>
+            <div class="text-center white-text mx-10 wow fadeIn">
+              <h1 class="mb-4"><strong>Front End Web Developer</strong></h1>
             </div>
           </div>
         </div>
@@ -149,26 +142,137 @@
 
         <div class="row">
 
-          <div class="col-md-6 mb-4">
+          <div class="col-md-4 mb-4">
 
             <img src="assets/img/ProfilePictureProfessional.jpg" class="img-fluid z-depth-1-half" alt="Profile Picture">
 
           </div>
 
-          <div class="col-md-6 mb-4">
+          <div class="col-md-8 mb-4">
             <h3 class="h3 mb-3">About Me</h3>
             <hr>
             <p>
-              <p>Repellat omnis ut velit id doloribus molestias. Illo ea et aut fuga labore enim vitae non. Veniam dolores ut et pariatur sint quod. Ea unde quia aut consequatur qui sit. Voluptatem illo qui cumque optio. Inventore sunt aut debitis corrupti.
-              Nisi molestias odit doloremque dolores voluptas libero. Ea et nostrum aut iusto ad at voluptate. Ea consequuntur saepe accusamus dolores minima. Aspernatur et facilis eius nesciunt nisi quidem voluptatibus porro.
-              Nam aliquid nihil laudantium qui. Fuga laboriosam ipsa rerum. Sunt non accusantium rerum consectetur odit et culpa. Quas eos provident ut expedita. Mollitia tempore voluptatem non eaque laboriosam corrupti.</p>
-              <p>Repellat omnis ut velit id doloribus molestias. Illo ea et aut fuga labore enim vitae non. Veniam dolores ut et pariatur sint quod. Ea unde quia aut consequatur qui sit. Voluptatem illo qui cumque optio. Inventore sunt aut debitis corrupti.
-              Nisi molestias odit doloremque dolores voluptas libero. Ea et nostrum aut iusto ad at voluptate. Ea consequuntur saepe accusamus dolores minima. Aspernatur et facilis eius nesciunt nisi quidem voluptatibus porro.
-              Nam aliquid nihil laudantium qui. Fuga laboriosam ipsa rerum. Sunt non accusantium rerum consectetur odit et culpa. Quas eos provident ut expedita. Mollitia tempore voluptatem non eaque laboriosam corrupti.</p>
+              <p>My name is Matthew Allen. I was born and raised in south Alabama on the Eastern Shore of Mobile Bay. I have a Bachelor of Arts in Psychology from Auburn University and a Master of Arts in Psychology from The University of West Florida. I spent the first 5 years of my professional career as an intensive in-home therapist for at risk youth. 
+              <p>I have worked as an in-home therapist in Florida, Alabama, & North Carolina. I learned a lot about people, families, and what motivates individuals to do various things throughout life. It was a truly enjoyable and fullfilling job, but ultimately I burned out. Once I started to feel compassion fatigue and realized I was not able to continue therapy at my best, I left the field for something new.</p>
+              <p>From there, the decision was quite simple for me. I have always loved technology, from taking a part my xbox as a teenager just to see how it worked, to reading about userscripts online and how they can automate actions for you. As an adult, I have found a hobby in building and selling CryptoCurrency mining rigs. I taught myself how to build them from the ground up as well as program the machine to do exactly what I needed. All of this made it clear to me that I wanted to be in the world of technology and I wanted to learn as much as I could.</p>
+              <p>When the opportunity to attend The Coding Bootcamp at UNC was presented to me, I jumped in head first, and it has been the greatest decision of my career. I have learned many different development tools, both front-end and back-end. WHile I enjoy both sides, I have truly found my passion to be front-end development. I love working up a design, pseudocoding it out, and then making it come to fruition and look exactly how I want. I have grown to love HTML, CSS, & Javascript and I often continue to expand my knowledge of these tools in my spare time. I know I have what it takes to be an amazing front-end developer and I look forward to working with a company that can utilize my talents to the fullest extent.</p>
             </p>
           </div>
 
         </div>
+        <section>
+
+          <h2 class="my-5 h3 text-center">My Stack</h2>
+  
+          <!--First row-->
+          <div class="row features-small mt-5 wow fadeIn">
+  
+            <!--Grid column-->
+            <div class="col-xl-3 col-lg-6">
+              <!--Grid row-->
+              <div class="row">
+                <div class="col-2">
+                  <img src="assets/img/Icons/skillsIcons.png">
+                </div>
+              </div>
+              <!--/Grid row-->
+            </div>
+            <!--/Grid column-->
+  
+            <!--Grid column-->
+            <div class="col-xl-3 col-lg-6">
+              <!--Grid row-->
+              <div class="row">
+                <div class="col-2">
+                  <img src="assets/img/Icons/VScode.png">
+                </div>
+              </div>
+              <!--/Grid row-->
+            </div>
+            <!--/Grid column-->
+  
+            <!--Grid column-->
+            <div class="col-xl-3 col-lg-6">
+              <!--Grid row-->
+              <div class="row">
+                <div class="col-2">
+                  <img src="assets/img/Icons/BULMAicon.png">
+                </div>
+              </div>
+              <!--/Grid row-->
+            </div>
+            <!--/Grid column-->
+  
+            <!--Grid column-->
+            <div class="col-xl-3 col-lg-6">
+              <!--Grid row-->
+              <div class="row">
+                <div class="col-2">
+                  <img src="assets/img/Icons/BootStrapicon.png">
+                </div>
+              </div>
+              <!--/Grid row-->
+            </div>
+            <!--/Grid column-->
+  
+          </div>
+          <!--/First row-->
+  
+          <!--Second row-->
+          <div class="row features-small mt-4 wow fadeIn">
+  
+            <!--Grid column-->
+            <div class="col-xl-3 col-lg-6">
+              <!--Grid row-->
+              <div class="row">
+                <div class="col-2">
+                  <img src="assets/img/Icons/NODE.png">
+                </div>
+              </div>
+              <!--/Grid row-->
+            </div>
+            <!--/Grid column-->
+  
+            <!--Grid column-->
+            <div class="col-xl-3 col-lg-6">
+              <!--Grid row-->
+              <div class="row">
+                <div class="col-2">
+                  <img src="assets/img/Icons/MySQLIcon.png">
+                </div>
+              </div>
+              <!--/Grid row-->
+            </div>
+            <!--/Grid column-->
+  
+            <!--Grid column-->
+            <div class="col-xl-3 col-lg-6">
+              <!--Grid row-->
+              <div class="row">
+                <div class="col-2">
+                  <img src="assets/img/Icons/Mongo.png">
+                </div>
+              </div>
+              <!--/Grid row-->
+            </div>
+            <!--/Grid column-->
+  
+            <!--Grid column-->
+            <div class="col-xl-3 col-lg-6">
+              <!--Grid row-->
+              <div class="row">
+                <div class="col-2">
+                  <img src="assets/img/Icons/REACT.png">
+                </div>
+              </div>
+              <!--/Grid row-->
+            </div>
+            <!--/Grid column-->
+  
+          </div>
+          <!--/Second row-->
+  
+        </section>
 
       </section>
 
@@ -179,7 +283,7 @@
       <!--Section: Not enough-->
       <section>
 
-        <h2 class="my-5 h3 text-center">Body of Work</h2>
+        <h2 class="my-5 h3 text-center">My Portfolio</h2>
 
         <!--First row-->
         <div class="row features-small mb-5 mt-3 wow fadeIn">
@@ -243,9 +347,7 @@
           <!--/First column-->
 
           <!--Second column-->
-          <div class="col-md-4 flex-center">
-            <img src="https://mdbootstrap.com/img/Others/screens.png" alt="MDB Magazine Template displayed on iPhone" class="z-depth-0 img-fluid">
-          </div>
+         
           <!--/Second column-->
 
           <!--Third column-->
@@ -305,119 +407,7 @@
       <hr class="mb-5">
 
       <!--Section: More-->
-      <section>
 
-        <h2 class="my-5 h3 text-center">Skills</h2>
-
-        <!--First row-->
-        <div class="row features-small mt-5 wow fadeIn">
-
-          <!--Grid column-->
-          <div class="col-xl-3 col-lg-6">
-            <!--Grid row-->
-            <div class="row">
-              <div class="col-2">
-                <img src="assets/img/Icons/skillsIcons.png">
-              </div>
-            </div>
-            <!--/Grid row-->
-          </div>
-          <!--/Grid column-->
-
-          <!--Grid column-->
-          <div class="col-xl-3 col-lg-6">
-            <!--Grid row-->
-            <div class="row">
-              <div class="col-2">
-                <img src="assets/img/Icons/VScode.png">
-              </div>
-            </div>
-            <!--/Grid row-->
-          </div>
-          <!--/Grid column-->
-
-          <!--Grid column-->
-          <div class="col-xl-3 col-lg-6">
-            <!--Grid row-->
-            <div class="row">
-              <div class="col-2">
-                <img src="assets/img/Icons/BULMAicon.png">
-              </div>
-            </div>
-            <!--/Grid row-->
-          </div>
-          <!--/Grid column-->
-
-          <!--Grid column-->
-          <div class="col-xl-3 col-lg-6">
-            <!--Grid row-->
-            <div class="row">
-              <div class="col-2">
-                <img src="assets/img/Icons/BootStrapicon.png">
-              </div>
-            </div>
-            <!--/Grid row-->
-          </div>
-          <!--/Grid column-->
-
-        </div>
-        <!--/First row-->
-
-        <!--Second row-->
-        <div class="row features-small mt-4 wow fadeIn">
-
-          <!--Grid column-->
-          <div class="col-xl-3 col-lg-6">
-            <!--Grid row-->
-            <div class="row">
-              <div class="col-2">
-                <img src="assets/img/Icons/NODE.png">
-              </div>
-            </div>
-            <!--/Grid row-->
-          </div>
-          <!--/Grid column-->
-
-          <!--Grid column-->
-          <div class="col-xl-3 col-lg-6">
-            <!--Grid row-->
-            <div class="row">
-              <div class="col-2">
-                <img src="assets/img/Icons/MySQLIcon.png">
-              </div>
-            </div>
-            <!--/Grid row-->
-          </div>
-          <!--/Grid column-->
-
-          <!--Grid column-->
-          <div class="col-xl-3 col-lg-6">
-            <!--Grid row-->
-            <div class="row">
-              <div class="col-2">
-                <img src="assets/img/Icons/Mongo.png">
-              </div>
-            </div>
-            <!--/Grid row-->
-          </div>
-          <!--/Grid column-->
-
-          <!--Grid column-->
-          <div class="col-xl-3 col-lg-6">
-            <!--Grid row-->
-            <div class="row">
-              <div class="col-2">
-                <img src="assets/img/Icons/REACT.png">
-              </div>
-            </div>
-            <!--/Grid row-->
-          </div>
-          <!--/Grid column-->
-
-        </div>
-        <!--/Second row-->
-
-      </section>
       <!--Section: More-->
 
     </div>
