--- a/index.html
+++ b/index.html
@@ -162,13 +162,13 @@
         </div>
         <section>
 
-          <h2 class="my-5 h3 text-center">My Stack</h2>
+          <h2 class="my-5 h3 text-center">My Skills</h2>
   
           <!--First row-->
-          <div class="row features-small mt-5 wow fadeIn">
+          <div class="row features-small mt-5 wow fadeIn text-center">
   
             <!--Grid column-->
-            <div class="col-xl-3 col-lg-6">
+            <div class="col-xl-3 col-lg-6 text-center">
               <!--Grid row-->
               <div class="row">
                 <div class="col-2">
@@ -180,7 +180,7 @@
             <!--/Grid column-->
   
             <!--Grid column-->
-            <div class="col-xl-3 col-lg-6">
+            <div class="col-xl-3 col-lg-6 text-center">
               <!--Grid row-->
               <div class="row">
                 <div class="col-2">
@@ -192,7 +192,7 @@
             <!--/Grid column-->
   
             <!--Grid column-->
-            <div class="col-xl-3 col-lg-6">
+            <div class="col-xl-3 col-lg-6 text-center">
               <!--Grid row-->
               <div class="row">
                 <div class="col-2">
@@ -204,7 +204,7 @@
             <!--/Grid column-->
   
             <!--Grid column-->
-            <div class="col-xl-3 col-lg-6">
+            <div class="col-xl-3 col-lg-6 text-center">
               <!--Grid row-->
               <div class="row">
                 <div class="col-2">
@@ -219,10 +219,10 @@
           <!--/First row-->
   
           <!--Second row-->
-          <div class="row features-small mt-4 wow fadeIn">
+          <div class="row features-small mt-4 wow fadeIn text-center">
   
             <!--Grid column-->
-            <div class="col-xl-3 col-lg-6">
+            <div class="col-xl-3 col-lg-6 text-center">
               <!--Grid row-->
               <div class="row">
                 <div class="col-2">
@@ -234,7 +234,7 @@
             <!--/Grid column-->
   
             <!--Grid column-->
-            <div class="col-xl-3 col-lg-6">
+            <div class="col-xl-3 col-lg-6 text-center">
               <!--Grid row-->
               <div class="row">
                 <div class="col-2">
@@ -246,7 +246,7 @@
             <!--/Grid column-->
   
             <!--Grid column-->
-            <div class="col-xl-3 col-lg-6">
+            <div class="col-xl-3 col-lg-6 text-center">
               <!--Grid row-->
               <div class="row">
                 <div class="col-2">
@@ -258,7 +258,7 @@
             <!--/Grid column-->
   
             <!--Grid column-->
-            <div class="col-xl-3 col-lg-6">
+            <div class="col-xl-3 col-lg-6 text-center">
               <!--Grid row-->
               <div class="row">
                 <div class="col-2">
@@ -289,16 +289,14 @@
         <div class="row features-small mb-5 mt-3 wow fadeIn">
 
           <!--First column-->
-          <div class="col-md-4">
+          <div class="col-4 text-center">
             <!--First row-->
             <div class="row">
-              <div class="col-2">
-                <i class="fas fa-check-circle fa-2x indigo-text"></i>
-              </div>
-              <div class="col-10">
+              <div class="col-12">
+                  <div class = "thumbnail">
+                      <img src = "assets/img/Route420ThumbnailResized.jpg" alt = "Generic placeholder thumbnail">
+                   </div>
                 <h6 class="feature-title"><a href="">Route 420 App</a></h6>
-                <p class="grey-text">CBD product locator that identifies where specific CBD relateed products are sold based on a users location. I was part of the front end team and helped with design.
-                </p>
                 <div style="height:15px"></div>
               </div>
             </div>
@@ -306,13 +304,8 @@
 
             <!--Second row-->
             <div class="row">
-              <div class="col-2">
-                <i class="fas fa-check-circle fa-2x indigo-text"></i>
-              </div>
-              <div class="col-10">
+              <div class="col-12">
                 <h6 class="feature-title"><a href="https://justmrmatt.github.io/Project_1/">Grab a Bite App</a></h6>
-                <p class="grey-text">Date night style app where users can see restaurants nearby and link to additional information. I was responsible for the front end coding and design.
-                </p>
                 <div style="height:15px"></div>
               </div>
             </div>
@@ -320,47 +313,37 @@
 
             <!--Third row-->
             <div class="row">
-              <div class="col-2">
-                <i class="fas fa-check-circle fa-2x indigo-text"></i>
-              </div>
-              <div class="col-10">
-                <h6 class="feature-title"><a href="https://justmrmatt.github.io/unit-4-game/">Funko Style RPG Game</a></h6>
-                <p class="grey-text">An RPG style game where a user selects a character and battles opponents in an arena setting.</p>
+              <div class="col-12">
+                <h6 class="feature-title"><a href="https://justmrmatt.github.io/unit-4-game/">Str8 Fire Technical Solutions</a></h6>
                 <div style="height:15px"></div>
               </div>
             </div>
             <!--/Third row-->
-
+            <div class="row">
+                <div class="col-12">
+                  <h6 class="feature-title"><a  href="https://justmrmatt.github.io/unit-4-game-Redux/">Crystal Collector Game</a></h6>
+                  <div style="height:15px"></div>
+                </div>
+            </div>
             <!--Fourth row-->
             <div class="row">
-              <div class="col-2">
-                <i class="fas fa-check-circle fa-2x indigo-text"></i>
-              </div>
-              <div class="col-10">
+              <div class="col-12">
                 <h6 class="feature-title"><a  href="https://justmrmatt.github.io/unit-4-game-Redux/">Crystal Collector Game</a></h6>
-                <p class="grey-text">A simple game where a user has to identify a pattern by clicking crystals with the goal being to reach a randomly chosen total.</p>
                 <div style="height:15px"></div>
               </div>
             </div>
             <!--/Fourth row-->
           </div>
-          <!--/First column-->
-
-          <!--Second column-->
-         
-          <!--/Second column-->
 
           <!--Third column-->
-          <div class="col-md-4 mt-2">
+          <div class="col-4 text-center">
             <!--First row-->
             <div class="row">
-              <div class="col-2">
-                <i class="fas fa-check-circle fa-2x indigo-text"></i>
-              </div>
-              <div class="col-10">
-                <h6 class="feature-title"><a  href="">Str8 Fire Technical Solutions</a></h6>
-                <p class="grey-text">A cryptocurrency mining operation where user can obtain stock information as well as purchase crypto-mining contracts. I am a co-founder and am responsible for full web design.
-                </p>
+              <div class="col-12">
+                  <div class = "thumbnail">
+                      <img src = "assets/img/DeadpoolRPGThumbnailResized.jpg" alt = "Generic placeholder thumbnail">
+                   </div>
+                <h6 class="feature-title"><a  href="">Funko Style RPG Game</a></h6>
                 <div style="height:15px"></div>
               </div>
             </div>
@@ -368,36 +351,34 @@
 
             <!--Second row-->
             <div class="row">
-              <div class="col-2">
-                <i class="fas fa-check-circle fa-2x indigo-text"></i>
-              </div>
-              <div class="col-10">
+              <div class="col-12">
                 <h6 class="feature-title"><a  href="">Allen, Allen & Foster, LLC.</a></h6>
-                <p class="grey-text">I helped design the front end and help keep everything up to date as well as make adjustments at the request of the owner.</p>
-                <div style="height:15px"></div>
               </div>
             </div>
             <!--/Second row-->
 
             <!--Third row-->
             <div class="row">
-              <div class="col-2">
-                <i class="fas fa-check-circle fa-2x indigo-text"></i>
-              </div>
-              <div class="col-10">
+              <div class="col-12">
                 <h6 class="feature-title"><a  href="">The Bearded Veteran</a></h6>
-                <p class="grey-text">I helped design the website as well as make adjustments as needed at the request of the owner.
-                </p>
                 <div style="height:15px"></div>
               </div>
             </div>
-            <!--/Third row-->
-
-            <!--Fourth row-->
-            <!--/Fourth row-->
           </div>
           <!--/Third column-->
-
+          <div class="col-4 text-center">
+              <!--First row-->
+              <div class="row">
+                <div class="col-12">
+                    <div class = "thumbnail">
+                        <img src = "assets/img/Icons/REACT.png" alt = "Generic placeholder thumbnail">
+                     </div>
+                  <h6 class="feature-title"><a  href="">Str8 Fire Technical Solutions</a></h6>
+                  <div style="height:15px"></div>
+                </div>
+              </div>
+              <!--/First row-->
+            </div> 
         </div>
         <!--/First row-->
 
